Update solution to leetcode problem: 3 sum